--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@syncfusion/ej2-base": "^18.3.44",
+    "@syncfusion/ej2-react-navigations": "^18.3.44",
     "axios": "^0.19.2",
     "cesium": "^1.70.1",
     "connected-react-router": "^6.8.0",
